# obs-playlist-deck

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_project.yml
data/locale/: de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  pt-BR.ini  ru-RU.ini  zh-CN.ini
docs/superpowers/plans/: 2026-06-20-obs-playlist-deck.md
docs/superpowers/specs/: 2026-06-20-obs-playlist-deck-design.md
resources/: icons.qrc
src/core/: CMakeLists.txt  Format.cpp  Format.hpp  MediaPath.cpp  MediaPath.hpp  Playlist.cpp  Playlist.hpp  PlaylistIO.cpp  PlaylistIO.hpp  Shuffle.cpp  Shuffle.hpp  Version.cpp  Version.hpp
src/plugin/: CMakeLists.txt  MediaProbe.cpp  MediaProbe.hpp  MediaSourceController.cpp  MediaSourceController.hpp  PlaylistDock.cpp  PlaylistDock.hpp  PlaylistListWidget.cpp  PlaylistListWidget.hpp  plugin-main.cpp
streamdeck/: README.md
streamdeck/com.angeloruggieridj.playlist-deck.sdPlugin/: app.html  app.js  manifest.json
streamdeck/com.angeloruggieridj.playlist-deck.sdPlugin/pi/: inspector.html
tests/: CMakeLists.txt  test_format.cpp  test_mediapath.cpp  test_playlist.cpp  test_playlistio.cpp  test_shuffle.cpp  test_smoke.cpp  test_version.cpp
tools/: gen_locales.py
